# stringheist

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
stringheist/: __init__.py  core.py  similarity.py
tests/: test_core.py  test_render_template.py  test_similarity.py  test_slugify.py  test_stringheist.py
